...
  private let searchView = UISearchController()
  private var viewModel: SearchViewModel!
  private var timer: Timer?
  
  private enum Constants {
    static let cellIdentifier: String = "resultsCell"
    static let title: String = "Search Artist"
    static let errorMessage: String = "Unable to create result cell"
    static let detailScreenId: String = "detailScreen"
    static let placeholderText: String = "Search artist..."
  }
  
  // MARK:- IBOutlets
...
